--- a/STM_TER.ioc
+++ b/STM_TER.ioc
@@ -35,7 +35,27 @@ Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=ADC1
-Dma.RequestsNb=1
+Dma.Request1=SPI3_TX
+Dma.Request2=SPI3_RX
+Dma.RequestsNb=3
+Dma.SPI3_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI3_RX.2.Instance=DMA2_Channel1
+Dma.SPI3_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI3_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI3_RX.2.Mode=DMA_NORMAL
+Dma.SPI3_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI3_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_RX.2.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SPI3_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.SPI3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI3_TX.1.Instance=DMA2_Channel2
+Dma.SPI3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI3_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI3_TX.1.Mode=DMA_CIRCULAR
+Dma.SPI3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI3_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SPI3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
@@ -92,6 +112,8 @@ MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -99,7 +121,6 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SPI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -198,8 +219,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Mise_en_oeuvre_Entrees_Sorties_CoVAPSy_L432.ioc
-ProjectManager.ProjectName=Mise_en_oeuvre_Entrees_Sorties_CoVAPSy_L432
+ProjectManager.ProjectFileName=STM_TER.ioc
+ProjectManager.ProjectName=STM_TER
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
