--- a/STM_TER.ioc
+++ b/STM_TER.ioc
@@ -35,27 +35,7 @@ Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=ADC1
-Dma.Request1=SPI3_TX
-Dma.Request2=SPI3_RX
-Dma.RequestsNb=3
-Dma.SPI3_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI3_RX.2.Instance=DMA2_Channel1
-Dma.SPI3_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI3_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.SPI3_RX.2.Mode=DMA_NORMAL
-Dma.SPI3_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI3_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI3_RX.2.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.SPI3_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.SPI3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI3_TX.1.Instance=DMA2_Channel2
-Dma.SPI3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI3_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI3_TX.1.Mode=DMA_CIRCULAR
-Dma.SPI3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI3_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI3_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.SPI3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
@@ -112,8 +92,6 @@ MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -300,9 +278,10 @@ SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
 SH.S_TIM1_CH4.ConfNb=1
 SH.S_TIM2_CH1.0=TIM2_CH1,Input_Capture1_from_TI1
 SH.S_TIM2_CH1.ConfNb=1
+SPI3.CLKPhase=SPI_PHASE_1EDGE
 SPI3.DataSize=SPI_DATASIZE_8BIT
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,DataSize
+SPI3.IPParameters=VirtualType,Mode,Direction,DataSize,CLKPhase
 SPI3.Mode=SPI_MODE_SLAVE
 SPI3.VirtualType=VM_SLAVE
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
@@ -331,4 +310,4 @@ VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=NUCLEO-L432KC
 boardIOC=true
-isbadioc=false
+isbadioc=true
