--- a/STM_TER.ioc
+++ b/STM_TER.ioc
@@ -223,8 +223,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Mise_en_oeuvre_Entrees_Sorties_CoVAPSy_L432.ioc
-ProjectManager.ProjectName=Mise_en_oeuvre_Entrees_Sorties_CoVAPSy_L432
+ProjectManager.ProjectFileName=STM_TER.ioc
+ProjectManager.ProjectName=STM_TER
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -233,7 +233,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_TIM7_Init-TIM7-false-HAL-true,12-MX_CRC_Init-CRC-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
